tests/snippets/errors/out_of_order.rs
fn main() {
    let b = a;
    let a = 1u8 + 1u8;
}